Auto-complete not working for ID templates #93519

Closed
opened 2021-11-30 17:34:39 +01:00 by Dalai Felinto · 6 comments

Blender Version
Broken: 2.83 to 3.0
Worked: 2.82

Short description of error
Auto-complete not working for ID templates.

Exact steps for others to reproduce the error
autocomplete.blend

In 2.82:
Go to the Cube object, and in its active modifier type "t + tab" to complete it to "tor".

In any version since:
It doesn't work.


User manual still referring to this feature: https://docs.blender.org/manual/en/dev/interface/controls/templates/data_block.html


This is probably broken due to "lib hinting characters" that are added to the search string in BKE_id_full_name_ui_prefix_get which is called from ui_rna_collection_search_update_fn. The actual search string contains a couple spaces in the beginning. It works when typing space+space+t+tab.
The fix is likely to update ui_searchbox_autocomplete a bit so that it handles this situation better.

**Blender Version** Broken: 2.83 to 3.0 Worked: 2.82 **Short description of error** Auto-complete not working for ID templates. **Exact steps for others to reproduce the error** [autocomplete.blend](https://archive.blender.org/developer/F12669448/autocomplete.blend) **In 2.82**: Go to the Cube object, and in its active modifier type "t + tab" to complete it to "tor". **In any version since**: It doesn't work. --- User manual still referring to this feature: https://docs.blender.org/manual/en/dev/interface/controls/templates/data_block.html --- This is probably broken due to "lib hinting characters" that are added to the search string in `BKE_id_full_name_ui_prefix_get` which is called from `ui_rna_collection_search_update_fn`. The actual search string contains a couple spaces in the beginning. It works when typing space+space+t+tab. The fix is likely to update `ui_searchbox_autocomplete` a bit so that it handles this situation better.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @azeemba

Added subscriber: @azeemba

I would like to contribute a patch on this issue. Let me know if there are any concerns!

I would like to contribute a patch on this issue. Let me know if there are any concerns!

This issue was referenced by b8bad3549d

This issue was referenced by b8bad3549dcef0b761708ef9cc1f814ebedb3106
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-12-09 11:15:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93519
No description provided.